--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "scripts": {
-        "start": "webpack-dev-server --config webpack.dev.js",
+        "start": "yarn lint && webpack-dev-server --config webpack.dev.js",
         "build": "webpack --config webpack.prod.js",
         "lint": "npx eslint \"src/**/*.{js,jsx,ts,tsx}\"",
         "lint:fix": "npx eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
