--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,11 @@
     "rules": {
         "prettier/prettier": "error",
         "react/react-in-jsx-scope": "off",
+        "jsx-a11y/click-events-have-key-events": "off",
+        "react/no-array-index-key": "off",
+        "jsx-a11y/no-static-element-interactions": "off",
+        "no-undef": "off",
+        "no-unused-expressions": "off",
         "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".ts", ".jsx", ".js"] }],
         "import/extensions": [
             "error",
