--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "html-webpack-plugin": "^5.6.0",
         "mini-css-extract-plugin": "^2.9.0",
         "prettier": "^3.3.2",
+        "props-type": "^1.0.1",
         "sass": "^1.77.8",
         "sass-loader": "^14.2.1",
         "terser-webpack-plugin": "^5.3.10",
@@ -50,7 +51,9 @@
     },
     "tscheck": "tsc",
     "dependencies": {
+        "@types/prop-types": "^15.7.12",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^6.24.1"
     }
 }
