refactor: change "types" folder name to "customTypes", change this alias, add types for items in header/footer components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
             "@assets/*": ["assets/*"],
             "@pages/*": ["pages/*"],
             "@contexts/*": ["contexts/*"],
-            "@types/*": ["types/*"],
+            "@customTypes/*": ["customTypes/*"],
         },
         "plugins": [
             {
