--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,10 @@
         "jsx-a11y/no-static-element-interactions": "off",
         "no-undef": "off",
         "no-unused-expressions": "off",
+        "no-unused-vars": "off",
+        "no-restricted-globals": "off",
+        "react/require-default-props": "off",
+        "jsx-a11y/no-noninteractive-element-interactions" : "off",
         "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".ts", ".jsx", ".js"] }],
         "import/extensions": [
             "error",
