--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
             "@pages/*": ["pages/*"],
             "@contexts/*": ["contexts/*"],
             "@customTypes/*": ["customTypes/*"],
+            "@mockData/*": ["mockData/*"],
         },
         "plugins": [
             {
