--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/react-dom": "18.3.0",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^9.1.3",
+        "clsx": "^2.1.1",
         "css-loader": "^7.1.2",
         "eslint": "^8.57.0",
         "eslint-config-airbnb": "^19.0.4",
