--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/prop-types": "^15.7.12",
         "@types/react": "18.3.3",
         "@types/react-dom": "18.3.0",
+        "autoprefixer": "^10.4.19",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^9.1.3",
         "clsx": "^2.1.1",
@@ -40,6 +41,7 @@
         "globals": "^15.8.0",
         "html-webpack-plugin": "^5.6.0",
         "mini-css-extract-plugin": "^2.9.0",
+        "postcss-loader": "^8.1.1",
         "prettier": "^3.3.2",
         "props-type": "^1.0.1",
         "sass": "^1.77.8",
