--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "@eslint/js": "^9.6.0",
         "@types/react": "18.3.3",
         "@types/react-dom": "18.3.0",
+        "@typescript-eslint/eslint-plugin": "^7.17.0",
+        "@typescript-eslint/parser": "^7.17.0",
         "autoprefixer": "^10.4.19",
         "babel-loader": "^9.1.3",
         "clsx": "^2.1.1",
@@ -43,6 +45,7 @@
         "sass-loader": "^14.2.1",
         "terser-webpack-plugin": "^5.3.10",
         "typescript": "5.5.3",
+        "typescript-eslint": "^7.17.0",
         "typescript-plugin-css-modules": "^5.1.0",
         "webpack": "^5.93.0",
         "webpack-cli": "^5.1.4",
@@ -50,7 +53,12 @@
     },
     "tscheck": "tsc",
     "dependencies": {
+        "chart.js": "^4.4.3",
+        "chartjs-adapter-date-fns": "^3.0.0",
+        "chartjs-chart-financial": "^0.2.1",
+        "date-fns": "^3.6.0",
         "react": "^18.3.1",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.24.1"
     }
