feat: add chart, fields for inputing/removing the data, observable class

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,6 +52,11 @@
         "react/no-array-index-key": "off",
         "jsx-a11y/no-static-element-interactions": "off",
         "no-undef": "off",
+        "react/no-unused-class-component-methods": "off",
+        "react/no-unused-state": "off",
+        "react/state-in-constructor": "off",
+        "react/destructuring-assignment": "off",
+        "default-param-last": "off",
         "@typescript-eslint/no-unused-vars": ["off"],
         "no-restricted-globals": "off",
         "react/require-default-props": "off",
