--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,7 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }],
+    "git": {
+        "branch": "feat/graph"
+    },
+    "alias": "currency-tracker-liard.vercel.app"
 }
