--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,6 +52,7 @@
         "react/no-array-index-key": "off",
         "jsx-a11y/no-static-element-interactions": "off",
         "no-undef": "off",
+        "react/static-property-placement" : "off",
         "react/no-unused-class-component-methods": "off",
         "react/no-unused-state": "off",
         "react/state-in-constructor": "off",
