--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "babel-loader": "^9.1.3",
         "clsx": "^2.1.1",
         "css-loader": "^7.1.2",
+        "dotenv": "^16.4.5",
         "eslint": "^8.57.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^9.1.0",
@@ -57,9 +58,11 @@
         "chartjs-adapter-date-fns": "^3.0.0",
         "chartjs-chart-financial": "^0.2.1",
         "date-fns": "^3.6.0",
+        "mapbox-gl": "^3.5.2",
         "react": "^18.3.1",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.3.1",
+        "react-map-gl": "^7.1.7",
         "react-router-dom": "^6.24.1"
     }
 }
