--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "react": "^18.3.1",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.3.1",
+        "react-hot-toast": "^2.4.1",
         "react-map-gl": "^7.1.7",
         "react-router-dom": "^6.24.1"
     }
