--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "build": "webpack --config webpack.prod.js",
         "lint": "npx eslint \"src/**/*.{js,jsx,ts,tsx}\"",
         "lint:fix": "npx eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
-        "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+        "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+        "cypress": "cypress open",
+        "test:cypress": "start-server-and-test start http://localhost:3000 cypress"
     },
     "keywords": [],
     "author": "",
@@ -27,6 +29,7 @@
         "babel-loader": "^9.1.3",
         "clsx": "^2.1.1",
         "css-loader": "^7.1.2",
+        "cypress": "^13.13.1",
         "dotenv": "^16.4.5",
         "eslint": "^8.57.0",
         "eslint-config-airbnb": "^19.0.4",
@@ -44,6 +47,7 @@
         "prettier": "^3.3.2",
         "sass": "^1.77.8",
         "sass-loader": "^14.2.1",
+        "start-server-and-test": "^2.0.4",
         "terser-webpack-plugin": "^5.3.10",
         "typescript": "5.5.3",
         "typescript-eslint": "^7.17.0",
