--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,6 +55,7 @@
         "no-plusplus": "off",
         "no-unused-expressions": "off",
         "no-return-assign": "off",
+        "react/jsx-props-no-spreading": "off",
         "react/static-property-placement" : "off",
         "react/no-unused-class-component-methods": "off",
         "react/no-unused-state": "off",
