test: add unit tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "types": ["jest", "node"],
         "outDir": "./dist/",
         "sourceMap": true,
         "noImplicitAny": true,
