--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "lint:fix": "npx eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
         "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
         "cypress": "cypress open",
-        "test:cypress": "start-server-and-test start http://localhost:3000 cypress"
+        "test:cypress": "start-server-and-test start http://localhost:3000 cypress",
+        "test:jest": "jest"
     },
     "keywords": [],
     "author": "",
@@ -21,6 +22,8 @@
         "@babel/preset-react": "^7.24.7",
         "@babel/preset-typescript": "7.24.7",
         "@eslint/js": "^9.6.0",
+        "@jest/globals": "^29.7.0",
+        "@types/jest": "^29.5.12",
         "@types/react": "18.3.3",
         "@types/react-dom": "18.3.0",
         "@typescript-eslint/eslint-plugin": "^7.17.0",
@@ -42,6 +45,7 @@
         "eslint-plugin-simple-import-sort": "^12.1.1",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.6.0",
+        "jest": "^29.7.0",
         "mini-css-extract-plugin": "^2.9.0",
         "postcss-loader": "^8.1.1",
         "prettier": "^3.3.2",
@@ -49,6 +53,7 @@
         "sass-loader": "^14.2.1",
         "start-server-and-test": "^2.0.4",
         "terser-webpack-plugin": "^5.3.10",
+        "ts-jest": "^29.2.3",
         "typescript": "5.5.3",
         "typescript-eslint": "^7.17.0",
         "typescript-plugin-css-modules": "^5.1.0",
